@@ -9,6 +9,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2016-08-01 DariusIII
+	Fix: Replace somehow reverted icon- with font-awesome versions in viewmoviefull and xxx tpl files in Alpha theme
 2016-07-28 DariusIII
 	Fix: Undefined index genreid in Charisma/Gamma/Gentele/Omicron themes (fixes issue #2209)
 2016-07-28 bart39
